Fixes in podcast provider actions

Show actions for non-empty podcast providers, too. Additionally, fix the podcast
configuration dialog UI.

BUG: 371192